# verifiable-apps

./: .gitignore  Cargo.toml  Makefile  README.md  macros.mk
.github/actions/docker-setup/: action.yml
.github/actions/stagex-pkg/: action.yml
.github/workflows/: rust.yml  stagex.yml
apps/reshard/: README.md
apps/reshard/app/: Cargo.toml
apps/reshard/app/src/: cli.rs  lib.rs  main.rs  service.rs
apps/reshard/host/: Cargo.toml
apps/reshard/host/proto/: reshard.proto
apps/reshard/host/src/: cli.rs  host.rs  lib.rs  main.rs
apps/reshard/provision/: Cargo.toml
apps/reshard/provision/src/: cli.rs  lib.rs  main.rs
apps/reshard/verify/: Cargo.toml
apps/reshard/verify/src/: cli.rs  lib.rs  main.rs
codegen/: Cargo.toml
codegen/src/: main.rs
common/health_check/: Cargo.toml
common/health_check/proto/: health.proto
common/health_check/src/: lib.rs
common/host_primitives/: Cargo.toml
common/host_primitives/src/: lib.rs
e2e/: Cargo.toml  README.md
e2e/fixtures/reshard/: ephemeral.pub  ephemeral.secret  quorum.pub  quorum.secret
e2e/fixtures/reshard/manifest-set/: user1.pub  user3.pub
e2e/fixtures/reshard/new-share-set/: new-share-set.json  reshard-1.pub  reshard-2.pub  reshard-3.pub  reshard-4.pub
e2e/fixtures/reshard/new-share-set-secrets/: reshard-1.secret  reshard-2.secret  reshard-3.secret  reshard-4.secret
e2e/fixtures/reshard/share-set/: user2.pub
e2e/src/: lib.rs  qos_simulator.rs
e2e/tests/: reshard.rs
images/common/: Containerfile
images/reshard_app/: Containerfile
images/reshard_host/: Containerfile
images/reshard_provision/: Containerfile
images/reshard_verify/: Containerfile
