[workspace.package]
edition = "2021"
rust-version = "1.88"

[workspace.lints]
rust.missing_docs = "warn"

[workspace]
members = [
	"common/host_primitives",
	"common/health_check",
	"apps/reshard/app"	
]

resolver = "2"

[workspace.dependencies]
tonic = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
prost = { version = "0.14", default-features = false }
borsh = { version = "1.5", default-features = false }
tokio = { version = "1.47", default-features = false }
tokio-stream = { version = "0.1" }
tonic-health = { version = "0.14" }
serde = { version = "1.0", default-features = false}


# QOS
qos_core = { git = "https://github.com/tkhq/qos.git", rev = "38db2841cae036eefce0dcb6d0cca80f93a91e98", default-features = false }
qos_crypto = { git = "https://github.com/tkhq/qos.git", rev = "38db2841cae036eefce0dcb6d0cca80f93a91e98", default-features = false }
qos_hex = { git = "https://github.com/tkhq/qos.git", rev = "38db2841cae036eefce0dcb6d0cca80f93a91e98", default-features = false }
qos_p256 = { git = "https://github.com/tkhq/qos.git", rev = "38db2841cae036eefce0dcb6d0cca80f93a91e98", default-features = false }
qos_nsm = { git = "https://github.com/tkhq/qos.git", rev = "38db2841cae036eefce0dcb6d0cca80f93a91e98", default-features = false }

# Local
host_primitives = { path = "common/host_primitives" }
codegen = { path = "common/codegen" }
