[workspace.package]
edition = "2021"
rust-version = "1.88"

[workspace.lints]
rust.missing_docs = "warn"

[workspace]
members = [
	"apps/reshard/app",
	"apps/reshard/host",
	"apps/reshard/provision",
	"common/host_primitives",
	"common/health_check",
	"e2e"
]

resolver = "2"

[workspace.dependencies]
tonic = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
prost = { version = "0.14", default-features = false }
borsh = { version = "1.5", default-features = false }
tokio = { version = "=1.43.1", default-features = false }
tokio-stream = { version = "0.1" }
tonic-health = { version = "0.14" }
tonic-reflection = { version = "0.14" }
serde = { version = "1.0", default-features = false}
serde_json = { version = "1", default-features = false }
clap = { version = "4.5", features = ["derive", "env", "std"], default-features = false }
tempdir = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false }
dialoguer = { version = "0.12", default-features = false }

# QOS
qos_core = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }
qos_crypto = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }
qos_hex = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }
qos_p256 = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }
qos_nsm = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }
qos_test_primitives = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }
qos_client = { git = "https://github.com/tkhq/qos.git", rev = "0060f65732115322620f094f63d7a81069169148", default-features = false }

# Local
host_primitives = { path = "common/host_primitives" }
health_check = { path = "common/health_check" }
codegen = { path = "common/codegen" }
reshard_app = { path = "apps/reshard/app" }
reshard_host = { path = "apps/reshard/host" }
reshard_provision = { path = "apps/reshard/provision" }
