[package]
name = "health_check"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
tonic = { workspace = true, features = ["codegen", "transport"] }
tonic-prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
prost = { workspace = true, features = ["derive", "std"] }
