[package]
name = "reshard_app"
version = "0.1.0"
edition = "2021"
publish = false

[features]
mock  = ["qos_core/mock", "qos_nsm/mock_realtime"]
vsock = ["qos_core/vm"]

[dependencies]
borsh = { workspace = true }
qos_core = { workspace = true }
qos_hex = { workspace = true }
qos_p256 = { workspace = true }
qos_crypto = { workspace = true }
qos_nsm = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["serde_derive", "std"]}
prost    = { workspace = true }
