[package]
name = "reshard_host"
version = "0.1.0"
edition = "2021"
publish = false

[features]
vsock = ["qos_core/vm"]

[dependencies]
tonic = { workspace = true, features = ["codegen", "transport", "router"]}
tokio = { workspace = true }
prost = { workspace = true, features = ["derive", "std"] }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
clap = { workspace = true }

host_primitives = { workspace = true }
health_check = { workspace = true }
reshard_app = { workspace = true }

qos_core = { workspace = true }
